--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -14,10 +14,10 @@
                     <button type="button" class="me-2 btn btn-sm btn-outline-secondary" onclick="download('Informe{{tipo}}{{date}}')">Exportar</button>
 
                     <div class="dropdown">
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
                 {{tipo}}
                 </button>
-                        <ul class="dropdown-menu fade-down" aria-labelledby="dropdownMenuButton1">
+                        <ul class="dropdown-menu fade-down" aria-labelledby="dropdownMenuButton2">
                             <li><a class="dropdown-item" href="/informe_ventas/diaria">Diario</a></li>
                             <li><a class="dropdown-item" href="/informe_ventas/mensual">Mensual</a></li>
                             <li><a class="dropdown-item" href="/informe_ventas/rango">Rango</a></li>
@@ -89,7 +89,7 @@
             </div>
             <div class="d-flex mx-2 justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
 
-                <h4 class="">citas</h4>
+                <h4 class="">Citas</h4>
 
             </div>
             <div class="mx-2 table-responsive">
@@ -112,7 +112,7 @@
                             <th scope="row">{{cita['id_cita']}}</th>
                             <td>{{cita['fecha']}}</td>
                             <td>
-                                {% for servicio in lista_servicios %} {% if servicio['cita_id'] == cita['id']%}
+                                {% for servicio in lista_servicios %} {% if servicio['id_cita'] == cita['id_cita']%}
                                 <p>{{servicio['nombre']}} - {{servicio['precio']}}</p>
                                 {% endif %} {% endfor %}
                             </td>                    
@@ -127,7 +127,7 @@
                             <th scope="col">Total</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
-                            <th scope="col"></th>
+                            
                             <th scope="col">{{total_citas_subtotal}}</th>
                             <th scope="col">{{total_citas_iva}}</th>
                             <th scope="col">{{total_citas_total}}</th>
