Implementacion de eliminación de cita y correcion en la visualizacion de citas

--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -2,87 +2,84 @@
 {% block title %}Información de cita{% endblock %}
 
 {% block body %}
-<!doctype html>
-<html lang="en">
+    <!doctype html>
+    <html lang="en">
 
-<head>
-    <!-- Custom styles for this template -->
-    {#
+    <head>
+        <!-- Custom styles for this template -->
+        {#
     <link href="informacion_cita.css" rel="stylesheet">#}
-</head>
+    </head>
 
 
-<body>
+    <body>
 
 
-    <main class="d-flex flex-nowrap" >
+    <main class="d-flex flex-nowrap">
 
 
         <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
 
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; margin-top: 4%;">
-            <a >
+            <a>
                 <span class="fs-4">Citas próximas</span>
             </a>
             <hr>
-            <ul style="margin-bottom:10%" class="nav nav-pills flex-column " >
+            <ul style="margin-bottom:10%" class="nav nav-pills flex-column ">
 
                 {% for cita in lista_citas %}
                     {% if fecha_actual <=  cita['fecha_datetime'] %}
-                <li class="nav-item">
-                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
-                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
-                        aria-current="page">
+                        <li class="nav-item">
+                            <a href="/informacion_cita/{{ cita['id_cita'] }}"
+                               class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
+                               aria-current="page">
 
-                        {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }} horas
-                    </a>
-                </li>
+                                {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }} horas
+                            </a>
+                        </li>
                     {% endif %}
                 {% endfor %}
             </ul>
-                <!--
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#speedometer2"></use>
-                        </svg>
-                        Cita de peinado
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <svg class="bi pe-none me-2" width="16" height="16">
-                            <use xlink:href="#table"></use>
-                        </svg>
-                        Cita de facial
-                    </a>
-                </li>
-                -->
+            <!--
+            <li>
+                <a href="#" class="nav-link link-dark">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#speedometer2"></use>
+                    </svg>
+                    Cita de peinado
+                </a>
+            </li>
+            <li>
+                <a href="#" class="nav-link link-dark">
+                    <svg class="bi pe-none me-2" width="16" height="16">
+                        <use xlink:href="#table"></use>
+                    </svg>
+                    Cita de facial
+                </a>
+            </li>
+            -->
 
 
-            <a >
+            <a>
                 <span class="fs-4">Citas pasadas</span>
             </a>
-<hr>
+            <hr>
             <ul class="nav nav-pills flex-column mb-auto">
 
                 {% for cita in lista_citas %}
                     {% if fecha_actual >  cita['fecha_datetime'] %}
-                <li class="nav-item">
-                    <a href="/informacion_cita/{{ cita['id_cita'] }}"
-                        class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
-                        aria-current="page">
+                        <li class="nav-item">
+                            <a href="/informacion_cita/{{ cita['id_cita'] }}"
+                               class="nav-link {% if cita['id_cita']== dicc_cita['id_cita'] %}active{% else %} link-dark{% endif %}"
+                               aria-current="page">
 
-                        {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }}
-                    </a>
-                </li>
+                                {{ cita['fecha_escrita'] }} a las {{ cita['hora'] }}
+                            </a>
+                        </li>
                     {% endif %}
                 {% endfor %}
             </ul>
 
-
-            
-            
 
             <!--<div class="dropdown">
                 <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
@@ -103,13 +100,12 @@
         </div>
 
 
-
-
-          <div class="col-md-7 col-lg-8" style="margin-top: 10%">
+        <div class="col-md-7 col-lg-8" style="margin-top: 10%">
             <form class="needs-validation" novalidate>
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
 
-                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
+                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm"
+                         style="background-color:  #7CB8EB">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
                             <h1 class="h6 mb-0 text-white lh-1">Cita en {{ dicc_cita['nombre_sucursal'] }}</h1>
@@ -119,12 +115,10 @@
                     </div>
 
 
-
-
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input  type="text" class="form-control" id="fecha"  value="{{ dicc_cita['fecha'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
@@ -132,32 +126,34 @@
 
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['hora'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="hora_fin" class="form-label">Hora de termino(24h)</label>
-                        <input type="text" class="form-control" id="hora_fin"  value="{{ dicc_cita['hora_fin'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora_fin" value="{{ dicc_cita['hora_fin'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
-                <div class="col-md-6">
+                    <div class="col-md-6">
                         <label for="nombre_sucursal" class="form-label">Nombre de sucursal</label>
-                        <input type="text" class="form-control" id="nombre_sucursal"  value="{{ dicc_cita['nombre_sucursal'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="nombre_sucursal"
+                               value="{{ dicc_cita['nombre_sucursal'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
-                <div class="col-md-6">
+                    <div class="col-md-6">
                         <label for="direccion_sucursal" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="direccion_sucursal"  value="{{ dicc_cita['direccion_sucursal'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="direccion_sucursal"
+                               value="{{ dicc_cita['direccion_sucursal'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -165,60 +161,65 @@
 
                     <h4 class="border-bottom pb-2 mb-0">Servicios a realizar</h4>
                     <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Estilista</th>
-                        <th scope="col">Precio</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for servicio in dicc_cita['lista_servicios'] %}
-                     <tr>
-                        <th scope="row">{{ servicio['nombre_servicio'] }}</th>
-                        <td>{{ servicio['descripcion'] }}</td>
+                        <thead>
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Estilista</th>
+                            <th scope="col">Precio</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for servicio in dicc_cita['lista_servicios'] %}
+                            <tr>
+                                <th scope="row">{{ servicio['nombre_servicio'] }}</th>
+                                <td>{{ servicio['descripcion'] }}</td>
 
-                        <td>{{ servicio['nombre_estilista'] }} {{ servicio['apellido1_estilista'] }}</td>
-                        <td>${{ servicio['precio'] }}</td>
-                    </tr>
+                                <td>{{ servicio['nombre_estilista'] }} {{ servicio['apellido1_estilista'] }}</td>
+                                <td>${{ servicio['precio'] }}</td>
+                            </tr>
 
-                {% endfor %}
+                        {% endfor %}
 
-                </tbody>
+                        </tbody>
 
-            </table>
+                    </table>
                     <div class="col-md-4">
                         <label for="subtotal" class="form-label">Subtotal</label>
-                        <input type="number" class="form-control" id="subtotal"  value="{{ dicc_cita['monto'] }}"
-                            readonly>
+                        <input type="number" class="form-control" id="subtotal" value="{{ dicc_cita['monto'] }}"
+                               readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
-                <div class="col-md-4">
+                    <div class="col-md-4">
                         <label for="iva" class="form-label">IVA</label>
-                        <input type="number" class="form-control" id="iva"  value="{{ dicc_cita['iva'] }}"
-                            readonly>
+                        <input type="number" class="form-control" id="iva" value="{{ dicc_cita['iva'] }}"
+                               readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
-                <div class="col-md-4">
+                    <div class="col-md-4">
                         <label for="total" class="form-label">Total a pagar</label>
                         <input type="number" class="form-control" id="total" value="{{ dicc_cita['total'] }}"
-                            readonly>
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
 
                     <hr>
-                <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" >
-                    <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
-                    <a class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar cita</a>
-                </div>
+                    <div style="display: flex; justify-content: space-between; padding-bottom: 3rem">
+                        <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
+                        {% if fecha_actual < dicc_cita['fecha_hora'] %}
+                            <a class="btn btn-lg btn-primary" href="/eliminar_cita/{{ dicc_cita['id_cita'] }}">Eliminar
+                                cita</a>
+                            <a class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar
+                            cita</a>
+                        {% endif %}
 
+                    </div>
 
 
                 </div>
@@ -228,12 +229,12 @@
 
     </main>
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 
     {#
     <script src="sidebars.js"></script>#}
-</body>
+    </body>
 
-</html>
+    </html>
 {% endblock %}
