--- a/templates/eliminar_cita.html
+++ b/templates/eliminar_cita.html
@@ -2,29 +2,27 @@
 {% block title %}información de cita{% endblock %}
 
 {% block body %}
-<!doctype html>
-<html lang="en">
+    <!doctype html>
+    <html lang="en">
 
 
+    <body>
 
 
-<body>
-
-
-    <main class="d-flex flex-nowrap" style="display: flex; justify-content: center; align-items: center; margin-top: 2%" >
+    <main class="d-flex flex-nowrap"
+          style="display: flex; justify-content: center; align-items: center; margin-top: 2%">
 
 
         <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
 
 
-
-
-
         <div class="col-md-7 col-lg-8" style="margin-top: 10%">
             <form class="needs-validation" method="POST" novalidate>
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
+                    <h2>¿Seguro que quieres eliminar esta cita? Esto no se podrá deshacer</h2>
 
-                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm" style="background-color:  #7CB8EB">
+                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm"
+                         style="background-color:  #7CB8EB">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
                             <h1 class="h6 mb-0 text-white lh-1">Cita de {{ dicc_cita['nombre_cliente'] }}</h1>
@@ -33,12 +31,12 @@
                         </div>
                     </div>
 
-                                        <input style="display: none" type="text" class="form-control" id="id_cita" name="id_cita"  value="{{ dicc_cita['id_cita'] }}" readonly>
-
 
                     <div class="col-md-6">
                         <label for="nombre_cliente" class="form-label">Nombre de cliente</label>
-                        <input type="text" class="form-control" id="nombre_cliente"  value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}" readonly>
+                        <input type="text" class="form-control" id="nombre_cliente"
+                               value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}"
+                               readonly>
                     </div>
 
                     <div class="col-md-6">
@@ -49,8 +47,8 @@
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input  type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
@@ -58,32 +56,32 @@
 
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['hora'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora de termino(24h)</label>
-                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['hora_fin'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora_fin'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
-                <div class="col-md-6">
+                    <div class="col-md-6">
                         <label for="hora" class="form-label">Nombre de sucursal</label>
-                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['nombre_sucursal'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['nombre_sucursal'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
-                <div class="col-md-6">
+                    <div class="col-md-6">
                         <label for="hora" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="hora"  value="{{ dicc_cita['direccion_sucursal'] }}"
-                            readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['direccion_sucursal'] }}"
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -91,64 +89,60 @@
 
                     <h4 class="border-bottom pb-2 mb-0">Servicios a realizar</h4>
                     <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Estilista</th>
-                        <th scope="col">Precio</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for servicio in dicc_cita['lista_servicios'] %}
-                     <tr>
-                        <th scope="row">{{ servicio['nombre_servicio'] }}</th>
-                        <td>{{ servicio['descripcion'] }}</td>
+                        <thead>
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Descripción</th>
+                            <th scope="col">Estilista</th>
+                            <th scope="col">Precio</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for servicio in dicc_cita['lista_servicios'] %}
+                            <tr>
+                                <th scope="row">{{ servicio['nombre_servicio'] }}</th>
+                                <td>{{ servicio['descripcion'] }}</td>
 
-                        <td>{{ servicio['nombre_estilista'] }} {{ servicio['apellido1_estilista'] }}</td>
-                        <td>${{ servicio['precio'] }}</td>
-                    </tr>
+                                <td>{{ servicio['nombre_estilista'] }} {{ servicio['apellido1_estilista'] }}</td>
+                                <td>${{ servicio['precio'] }}</td>
+                            </tr>
 
-                {% endfor %}
+                        {% endfor %}
 
-                </tbody>
+                        </tbody>
 
-            </table>
+                    </table>
                     <div class="col-md-4">
                         <label for="subtotal" class="form-label">Subtotal</label>
-                        <input type="number" class="form-control" id="subtotal"  value="{{ dicc_cita['monto'] }}"
-                            readonly>
+                        <input type="number" class="form-control" id="subtotal" value="{{ dicc_cita['monto'] }}"
+                               readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
-                <div class="col-md-4">
+                    <div class="col-md-4">
                         <label for="iva" class="form-label">IVA</label>
                         <input type="number" class="form-control" id="iva" value="{{ dicc_cita['iva'] }}"
-                            readonly>
+                               readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
-                <div class="col-md-4">
+                    <div class="col-md-4">
                         <label for="total" class="form-label">Total a pagar</label>
                         <input type="number" class="form-control" id="total" value="{{ dicc_cita['total'] }}"
-                            readonly>
+                               readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
 
                     <hr>
-                <div style="display: flex; justify-content: space-between; padding-bottom: 3rem" >
-                    <a class="btn btn-lg btn-primary" href="/consultar_citas">Todas las citas</a>
-                    {% if fecha_actual < dicc_cita['fecha_hora'] %}
-                    <a class="btn btn-lg btn-primary" href="/eliminar_cita/{{ dicc_cita['id_cita'] }}">Eliminar cita</a>
-                    <a class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar cita</a>
-                    {% endif %}
-
-                </div>
-
+                    <div style="display: flex; justify-content: space-between; padding-bottom: 3rem">
+                        <a class="btn btn-lg btn-primary"
+                           href="/informacion_cita/{{ dicc_cita['id_cita'] }}">Cancelar</a>
+                        <button class="btn btn-lg btn-primary" type="submit">Eliminar cita</button>
+                    </div>
 
 
                 </div>
@@ -157,12 +151,12 @@
 
     </main>
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
 
     {#
     <script src="sidebars.js"></script>#}
-</body>
+    </body>
 
-</html>
+    </html>
 {% endblock %}
