Implementar cambiar contraseña

--- a/templates/confirmar_cita.html
+++ b/templates/confirmar_cita.html
@@ -1,6 +1,6 @@
 <!--ARCHIVO HECHO DE PRUEBA -->
 {% extends 'base.html' %}
-{% block title %}Hora_cita{% endblock %}
+{% block title %}Confirmar cita{% endblock %}
 
 {% block body %}
     <!doctype html>
