--- a/templates/consultar_usuarios.html
+++ b/templates/consultar_usuarios.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Clientes registrados{% endblock %}
+{% block title %}Usuarios registrados{% endblock %}
 {% block body %}
 
 <!doctype html>
