--- a/templates/eliminar_cita.html
+++ b/templates/eliminar_cita.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}información de cita{% endblock %}
+{% block title %}Eliminar cita{% endblock %}
 
 {% block body %}
     <!doctype html>
