--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Consultar cita{% endblock %}
+{% block title %}Consultar citas{% endblock %}
 {% block body %}
 <!doctype html>
 <html lang="en">
