--- a/templates/consultar_citas_gerente_recepcionista.html
+++ b/templates/consultar_citas_gerente_recepcionista.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Ver cita{% endblock %}
+{% block title %}Consultar citas{% endblock %}
 {% block body %}
 
 <!doctype html>
