--- a/templates/info_cita_gerente_recepcionista.html
+++ b/templates/info_cita_gerente_recepcionista.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}información de cita{% endblock %}
+{% block title %}Información de cita{% endblock %}
 
 {% block body %}
 <!doctype html>
