--- a/templates/informacion_servicio.html
+++ b/templates/informacion_servicio.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}información de servicio{% endblock %}
+{% block title %}Información de servicio{% endblock %}
 
 {% block body %}
 <!doctype html>
