Implementar registrar usuario por usuario tipo recepcionista o gerente

--- a/templates/cambiar_password.html
+++ b/templates/cambiar_password.html
@@ -35,7 +35,7 @@
                            value="">
 
                 </div>
-                <hr>
+                <hr class="my-4">
                 <div class="col-md-8">
                     <label for="new_password1" class="form-label">Introduzca su nueva contraseña:</label>
                     <input type="password" class="form-control" id="new_password1" name="new_password1"
