--- a/templates/base.html
+++ b/templates/base.html
@@ -1,158 +1,156 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="icon" href="/static/images/cleopatra.png">
+    <link rel="icon" href="/static/images/cleopatra.png">
 </head>
 <html lang="en">
 
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}Base{% endblock %}</title>
-  <link rel="icon" href="">
-  <!--BOOSTRAP-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <!--CUSTOM CSS-->
-  {% block customCSS %}
-  {% endblock %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Base{% endblock %}</title>
+    <link rel="icon" href="">
+    <!--BOOSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--CUSTOM CSS-->
+    {% block customCSS %}
+    {% endblock %}
 
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
 
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
 
-    .b-example-divider {
-      height: 3rem;
-      background-color: #7CB8EB;
-      border: solid #7CB8EB;
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em #7CB8EB, inset 0 .125em .5em #7CB8EB;
-    }
+        .b-example-divider {
+            height: 3rem;
+            background-color: #7CB8EB;
+            border: solid #7CB8EB;
+            border-width: 1px 0;
+            box-shadow: inset 0 .5em 1.5em #7CB8EB, inset 0 .125em .5em #7CB8EB;
+        }
 
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
+        .b-example-vr {
+            flex-shrink: 0;
+            width: 1.5rem;
+            height: 100vh;
+        }
 
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
+        .bi {
+            vertical-align: -.125em;
+            fill: currentColor;
+        }
 
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
+        .nav-scroller {
+            position: relative;
+            z-index: 2;
+            height: 2.75rem;
+            overflow-y: hidden;
+        }
 
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
+        .nav-scroller .nav {
+            display: flex;
+            flex-wrap: nowrap;
+            padding-bottom: 1rem;
+            margin-top: -1px;
+            overflow-x: auto;
+            text-align: center;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+        }
+    </style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
 <header>
 
 
-  <nav class="navbar navbar-dark bg-dark fixed-top" style="position:fixed; margin-top: -20; display:block; width:100%;">
-    <div class="container-fluid">
+    <nav class="navbar navbar-dark bg-dark fixed-top"
+         style="position:fixed; margin-top: -20; display:block; width:100%;">
+        <div class="container-fluid">
 
-      <a class="navbar-brand" href="/#">
-        <img src="/static/images/cleopatra.png"  width="30" height="30">
-        <a class="navbar-brand" href="/#" style="margin-right: auto;">True Beauty</a>
-      </a>
+            <a class="navbar-brand" href="/#">
+                <img src="/static/images/cleopatra.png" width="30" height="30">
+                <a class="navbar-brand" href="/#" style="margin-right: auto;">True Beauty</a>
+            </a>
 
-      <form class="d-flex">
-{% if logeado=='no' %}
-        <a class="btn btn-outline-light me-2" href="/login">Login</a>
-        <a class="btn btn-outline-light me-2" href="/signup">Sign-up</a>
- {% else %}
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-          aria-controls="offcanvasDarkNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-{% endif %}
-      </form>
+            <form class="d-flex">
+                {% if logeado=='no' %}
+                    <a class="btn btn-outline-light me-2" href="/login">Login</a>
+                    <a class="btn btn-outline-light me-2" href="/signup">Sign-up</a>
+                {% else %}
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasDarkNavbar"
+                            aria-controls="offcanvasDarkNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                {% endif %}
+            </form>
+            {% if logeado == 'yes' %}
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                     aria-labelledby="offcanvasDarkNavbarLabel">
 
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-        aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">True Beauty</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
 
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">True Beauty</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-            aria-label="Close"></button>
+                    </div>
 
-        </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            {% if accesos %}
+                                {% for link,nombre in accesos.items() %}
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page"
+                                           href="{{ link }}">{{ nombre }}</a>
+                                    </li>
+                                {% endfor %}
+                            {% endif %}
 
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            {% if accesos %}
-            {% for link,nombre in accesos.items() %}
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{ link }}">{{ nombre }}</a>
-            </li>
-            {% endfor %}
+
+
+                            <li class="nav-item dropdown">
+
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    Mi cuenta
+                                </a>
+
+                                <ul class="dropdown-menu dropdown-menu-dark">
+
+                                    <li><a class="dropdown-item" href="/info_cuenta/">Mi información</a></li>
+
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
+                                </ul>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             {% endif %}
-
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/#">Home</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Dropdown
-              </a>
-
-              <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#"> Aqui deberia de aparecer: {{ logeado }}</a></li>
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-
-            </li>
-          </ul>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!--BOOSTRAP
+    <!--BOOSTRAP
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <img class="me-3" src="/static/images/cleopatra.png" alt="" width="30" height="30">
@@ -194,20 +192,37 @@
 </header>
 
 <body>
-  {% block body %}
-  {% endblock %}
-
+{% block body %}
+{% endblock %}
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
 <link href="/css/bootstrap-combobox.css" media="screen" rel="stylesheet" type="text/css">
 <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/static/js/funciones.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/3673b740d5.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.4/jspdf.plugin.autotable.min.js"></script>
+
 
 </body>
+<footer>
+    {% block footer %} {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
+            integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
+            integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha"
+            crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/static/js/funciones.js?n=1"></script>
+
+
+</footer>
 
 </html>
