--- a/templates/consultar_citas_de_estilista.html
+++ b/templates/consultar_citas_de_estilista.html
@@ -16,38 +16,36 @@
         <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm">
             <img class="me-3" src="/static/images/consultar_cita.png" alt="" width="48" height="48">
             <div class="lh-1">
-                <h1 class="h6 mb-0 text-white lh-1">Consultar las citas de los clientes:</h1>
-                <small>¡Bienvenido a la sección de citas!</small>
+                <h1 class="h6 mb-0 text-white lh-1">Consulta las horas en que ofrecerás un servicio:</h1>
+                <small>¡Bienvenido a la sección de servicios!</small>
             </div>
         </div>
 
 
         <div class="my-3 p-3 bg-body rounded shadow-sm">
-            <h6 class="border-bottom pb-2 mb-0">Citas</h6>
-<div class="col-auto mb-3 ">
-                <input class="form-control" type="text" id="searchbox" onkeyup="buscar( 'searchbox', 'citas') " placeholder="Buscar cita... ">
-            </div>
+            <h6 class="border-bottom pb-2 mb-0">Servicios programados</h6>
 
-            <table id="citas" class="table table-striped table-hover">
+
+            <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">Usuario</th>
-                        <th scope="col">Fecha</th>
-                        <th scope="col">Hora</th>
-                        <th scope="col">Monto</th>
                         <th scope="col">Sucursal</th>
-                        <th scope="col">Más información</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Hora de inicio</th>
+                        <th scope="col">Hora de termino</th>
+
                     </tr>
                 </thead>
                 <tbody>
-                {% for cita in citas %}
+                {% for cita in servicios_programados %}
                      <tr>
-                        <td scope="row">{{ cita['nombre_completo'] }}</td>
+                        <th scope="row">{{ cita['nombre_sucursal'] }}</th>
+                        <td>{{ cita['nombre_servicio'] }}</td>
                         <td>{{ cita['fecha'] }}</td>
-                        <td>{{ cita['hora'] }}</td>
-                        <td>${{ cita['monto'] }}</td>
-                         <td>{{ cita['nombre_sucursal'] }}</td>
-                        <td><a href="/informacion_cita/{{ cita['id_cita'] }}"  class="btn btn-primary btn-sm">Ver cita</a></td>
+                        <td>{{ cita['hora_inicio'] }} horas</td>
+                        <td>{{ cita['hora_fin'] }} horas</td>
+
                     </tr>
 
                 {% endfor %}
@@ -56,10 +54,11 @@
 
             </table>
 
-
+            {% if tipo_usuario =='gerente' %}
             <small class="d-block text-end mt-3">
-                <a href="/escoger_cita" class="btn btn-primary btn-sm">Agendar cita nueva</a>
+                <a href="/consultar_servicios" class="btn btn-primary btn-sm">Información de servicios</a>
             </small>
+        {% endif %}
         </div>
 
 
