--- a/templates/consultar_usuarios.html
+++ b/templates/consultar_usuarios.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Clientes registrados{% endblock %}
+{% block title %}Usuarios registrados{% endblock %}
 {% block body %}
 
 <!doctype html>
@@ -26,27 +26,27 @@
         <h5>{{ get_flashed_messages()[0] }}</h5>
             <h6 class="border-bottom pb-2 mb-0">Clientes</h6>
 <div class="col-auto mb-3 ">
-                <input class="form-control" type="text" id="searchbox" onkeyup="buscarCliente( 'searchbox', 'clientes') " placeholder="Buscar cliente... ">
+                <input class="form-control" type="text" id="searchbox" onkeyup="buscarCliente( 'searchbox', 'usuarios') " placeholder="Buscar cliente... ">
             </div>
 
-            <table id="clientes" class="table table-striped table-hover">
+            <table id="usuarios" class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th scope="col">Nombre</th>
                         <th scope="col">Correo</th>
                         <th scope="col">Teléfono</th>
-                        <th scope="col" >Agendarle cita</th>
-                        <th scope="col" >Ver cliente</th>
+                        <th scope="col" >Tipo</th>
+                        <th scope="col" >Ver usuario</th>
                     </tr>
                 </thead>
                 <tbody>
-                {% for cliente in lista_clientes %}
+                {% for usuario in lista_usuarios %}
                      <tr>
-                        <td scope="row">{{ cliente['nombre'] }} {{ cliente['apellido_paterno'] }} {{ cliente['apellido_materno'] }}</td>
-                        <td>{{ cliente['correo'] }}</td>
-                        <td>{{ cliente['telefono'] }}</td>
-                        <td><a href="/escoger_cita/{{ cliente['id_usuario'] }}" class="btn btn-primary btn-sm" >Agendar</a></td>
-                        <td><a href="/info_cuenta/{{ cliente['id_usuario'] }}" class="btn btn-primary btn-sm" >Detalles</a></td>
+                        <td scope="row">{{ usuario['nombre'] }} {{ usuario['apellido_paterno'] }} {{ usuario['apellido_materno'] }}</td>
+                        <td>{{ usuario['correo'] }}</td>
+                        <td>{{ usuario['telefono'] }}</td>
+                        <td>{{ usuario['tipo_usuario'] }} </td>
+                        <td><a href="/info_cuenta/{{ usuario['id_usuario'] }}" class="btn btn-primary btn-sm" >Detalles</a></td>
                     </tr>
 
                 {% endfor %}
@@ -78,7 +78,7 @@
     // Loop through all table rows, and hide those who don't match the search query
     for (i = 0; i < tr.length; i++) {
         count = 0;
-        tamanio = tr[i].getElementsByTagName("td").length - 2;
+        tamanio = tr[i].getElementsByTagName("td").length - 1;
         for (j = 0; j < tamanio; j++) {
             td = tr[i].getElementsByTagName("td")[j];
 
